k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-demo
  namespace: flask-app-demo
spec:
  selector:
    app: flask-app-demo
    role: web
  ports:
    - name: http
      port: 80
      targetPort: gunicorn
