k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-demo
  namespace: flask-app-demo
  # annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1   
    # nginx.ingress.kubernetes.io/use-regex: "true"  
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.jarbank.io
    http:
      paths:
      - path: /flaskappdemo/
        pathType: Prefix
        backend:
          service:
            name: flask-app-demo
            port:
              number: 80
